# DENG_Mobility

./: .gitignore  Dockerfile.airflow  Dockerfile.ingest  QuickStart_Teammitglieder.md  README.md  docker-compose.yml  ingest_meteo.py  ingest_traffic.py  load_meteo.py  main.py  pyproject.toml  transform_zurich_daily.py
airflow/dags/: cloud_data_lake_ingestion.py  cloud_warehouse_transformation.py  zurich_pipeline.py
cloud/: ingest_to_gcs.py  transform_gcs_to_bigquery.py
initdb/: create_databases.sql
terraform/: main.tf  terraform.tfvars.example  variables.tf
